# heterocephalus

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  heterocephalus.cabal  stack-lts-10.yaml  stack-lts-2.yaml  stack-lts-lower.yaml  stack.yaml
.github/workflows/: haskell.yml  test.yaml
src/Text/: Heterocephalus.hs
src/Text/Hamlet/: Parse.hs
src/Text/Heterocephalus/: Parse.hs
src/Text/Heterocephalus/Parse/: Control.hs  Doc.hs  Option.hs
templates/: sample.txt
test/: Doctest.hs
