name:                heterocephalus
version:             1.0.2.0
synopsis:            A type-safe template engine for working with popular front end development tools
description:
    Recent front end development tools and languages are growing fast and have
    quite a complicated ecosystem. Few front end developers want to be forced
    use Shakespeare templates. Instead, they would rather use @node@ friendly
    engines such that @pug@, @slim@, and @haml@. However, in using these
    template engines, we lose the compile-time variable interpolation and type
    checking from Shakespeare.
    .
    Heterocephalus is intended for use with another feature rich template
    engine and provides a way to interpolate server side variables into a
    precompiled template file with @forall@ and @if@ statements.

homepage:            https://github.com/arowM/heterocephalus#readme
license:             MIT
license-file:        LICENSE
author:              Kadzuya Okamoto
maintainer:          arow.okamoto+github@gmail.com
copyright:           2016 Kadzuya Okamoto
category:            Web
build-type:          Simple
extra-source-files:  templates/*.txt
                     README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Heterocephalus
  other-modules:       Text.Hamlet.Parse
                     , Text.Heterocephalus.Parse
  build-depends:       base >= 4.7 && < 5
                     , blaze-html >= 0.8 && < 0.9
                     , blaze-markup >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.6
                     , dlist >= 0.7.1.1
                     , parsec >= 3.1 && < 3.2
                     , shakespeare >= 2.0 && < 2.1
                     , template-haskell >= 2.7 && < 3
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite heterocephalus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heterocephalus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base
                     , Glob
                     , doctest >= 0.10
                     , heterocephalus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arowM/heterocephalus
