name:                heterocephalus
version:             1.0.5.7
synopsis:            A type-safe template engine for working with front end development tools
description:
    Recent front end development tools and languages are growing fast and have
    quite a complicated ecosystem. Few front end developers want to be forced
    use Shakespeare templates. Instead, they would rather use @node@-friendly
    engines such that @pug@, @slim@, and @haml@. However, in using these
    template engines, we lose the compile-time variable interpolation and type
    checking from Shakespeare.
    .
    Heterocephalus is intended for use with another feature rich template
    engine and provides a way to interpolate server side variables into a
    precompiled template file with @forall@, @if@, and @case@ statements.

homepage:            https://github.com/arowM/heterocephalus#readme
license:             MIT
license-file:        LICENSE
author:              Kadzuya Okamoto
maintainer:          arow.okamoto+github@gmail.com
copyright:           2016 Kadzuya Okamoto
category:            Web
build-type:          Simple
extra-source-files:  templates/*.txt
                     README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Heterocephalus
  other-modules:       Text.Hamlet.Parse
                     , Text.Heterocephalus.Parse
                     , Text.Heterocephalus.Parse.Control
                     , Text.Heterocephalus.Parse.Doc
                     , Text.Heterocephalus.Parse.Option
  build-depends:       base >= 4.14.3.0 && < 5
                     , blaze-html >= 0.9.1.2
                     , blaze-markup >= 0.8.2.8
                     , containers >= 0.6.4.1
                     , dlist >= 1.0
                     , mtl >= 2.2.2
                     , parsec >= 3.1.14.0
                     , shakespeare >= 2.0.26
                     , template-haskell >= 2.16.0.0
                     , template-haskell-compat-v0208 >= 0.1.7
                     , text >= 1.2.4.1
                     , transformers >= 0.5.6.2
  ghc-options:         -Wall -Wcompat -Wnoncanonical-monad-instances
  default-language:    Haskell2010

test-suite heterocephalus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heterocephalus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base
                     , Glob
                     , doctest >= 0.10
                     , heterocephalus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arowM/heterocephalus
